// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<back-top> demo: > render [basic] correctly 1`] = `
"<div data-v-3820a148=\\"\\" class=\\"wrapper\\">
  <ul data-v-3820a148=\\"\\" id=\\"basic-demo\\">
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
    <li data-v-3820a148=\\"\\">This is the content</li>
  </ul>
  <transition-stub data-v-3820a148=\\"\\" name=\\"fade-in\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\" style=\\"position: absolute;\\">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`<back-top> demo: > render [custom] correctly 1`] = `
"<div data-v-fd43be9a=\\"\\" class=\\"wrapper\\">
  <ul data-v-fd43be9a=\\"\\" id=\\"custom-demo\\">
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
    <li data-v-fd43be9a=\\"\\">This is the content</li>
  </ul>
  <transition-stub data-v-fd43be9a=\\"\\" name=\\"fade-in\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\" style=\\"position: absolute;\\">
    <!--v-if-->
  </transition-stub>
</div>"
`;
